resolve minor section spacing issue

--- a/css/creative.css
+++ b/css/creative.css
@@ -49,7 +49,7 @@ p {
   color: rgba(255, 255, 255, 0.7);
 }
 section {
-  padding: 30px 0;
+  padding: 10px 0;
 }
 aside {
   padding: 50px 0;
